# truckersmp-server

./: CMakeLists.txt
client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientBase.cpp  ClientBase.hpp  ClientQueue.cpp  ClientQueue.hpp  main.cpp
server/: CMakeLists.txt  ChatCommands.cpp  ChatCommands.hpp  Server.cpp  Server.hpp  ServerBase.cpp  ServerBase.hpp  ServerQueue.cpp  ServerQueue.hpp  main.cpp
shared/truckersmp/: Authentication.hpp  Packets.hpp  Player.hpp  TruckersMP.hpp  Utils.hpp
utils/: analytics.py
